src/objects/Template_Row__c.object
<CustomObject><fields>
        <fullName>Container__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Color</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Content_Container__c.Type__c</field>
                <operation>equals</operation>
                <value>Style</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Content_Container__c</referenceTo>
        <relationshipLabel>Rows</relationshipLabel>
        <relationshipName>Rows1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Page__c</fullName>
        <label>_Page</label>
        <referenceTo>Template_Page__c</referenceTo>
        <relationshipName>Rows</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Sort_Order__c</fullName>
        <label>Display Order</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Row</label><nameField>
        <label>Row</label>
        <type>Text</type>
    </nameField><pluralLabel>Rows</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>